# cli-lib

./: CMakeLists.txt  README.md
.github/workflows/: ctest.yml
examples/: example_01.cpp
src/: CMakeLists.txt  cli-lib.c  cli-lib.cpp  cli-lib.h  clib.c  clib.h
tests/: api.cpp  declare.cpp  parsing.cpp  test_01.cpp
